[gd_scene load_steps=31 format=3 uid="uid://bl2kfjfbn2sie"]

[ext_resource type="Script" path="res://entities/structures/dark-tower/dark_tower.gd" id="1_0dqn5"]
[ext_resource type="Texture2D" uid="uid://bwach4flogf1j" path="res://entities/structures/dark-tower/sheet.png" id="1_0gc8o"]
[ext_resource type="Texture2D" uid="uid://dv3i6g6j7o26d" path="res://common/explosion.png" id="3_730m7"]
[ext_resource type="PackedScene" uid="uid://b42o4ohq54i" path="res://ui/health-bar/health-bar.tscn" id="4_iqpmt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4psas"]
atlas = ExtResource("1_0gc8o")
region = Rect2(0, 288, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn2gt"]
atlas = ExtResource("1_0gc8o")
region = Rect2(0, 192, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsecl"]
atlas = ExtResource("1_0gc8o")
region = Rect2(64, 192, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_saqon"]
atlas = ExtResource("1_0gc8o")
region = Rect2(128, 192, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3dft"]
atlas = ExtResource("1_0gc8o")
region = Rect2(192, 192, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlmj8"]
atlas = ExtResource("1_0gc8o")
region = Rect2(256, 192, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mxaq"]
atlas = ExtResource("1_0gc8o")
region = Rect2(320, 192, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w71rj"]
atlas = ExtResource("1_0gc8o")
region = Rect2(384, 192, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvxkr"]
atlas = ExtResource("1_0gc8o")
region = Rect2(0, 96, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqejt"]
atlas = ExtResource("1_0gc8o")
region = Rect2(64, 96, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo1mw"]
atlas = ExtResource("1_0gc8o")
region = Rect2(128, 96, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxfdq"]
atlas = ExtResource("1_0gc8o")
region = Rect2(192, 96, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_voc02"]
atlas = ExtResource("1_0gc8o")
region = Rect2(256, 96, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoceg"]
atlas = ExtResource("1_0gc8o")
region = Rect2(320, 96, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rugnm"]
atlas = ExtResource("1_0gc8o")
region = Rect2(384, 96, 64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_j81w5"]
atlas = ExtResource("1_0gc8o")
region = Rect2(448, 96, 64, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_1iefk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4psas")
}],
"loop": false,
"name": &"destroyed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn2gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsecl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saqon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3dft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlmj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mxaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w71rj")
}],
"loop": true,
"name": &"generate",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvxkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqejt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo1mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxfdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voc02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoceg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rugnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j81w5")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mpu68"]
atlas = ExtResource("3_730m7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sifq4"]
atlas = ExtResource("3_730m7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbyru"]
atlas = ExtResource("3_730m7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrs0b"]
atlas = ExtResource("3_730m7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov2ht"]
atlas = ExtResource("3_730m7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcjfb"]
atlas = ExtResource("3_730m7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkkr1"]
atlas = ExtResource("3_730m7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5e366"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpu68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sifq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbyru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrs0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov2ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcjfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkkr1")
}],
"loop": false,
"name": &"explosion",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_exwa6"]
radius = 16.0
height = 40.0

[node name="DarkTower" type="StaticBody2D" groups=["Structures"]]
z_index = 1000
script = ExtResource("1_0dqn5")

[node name="BaseSprite" type="AnimatedSprite2D" parent="."]
z_index = 10
sprite_frames = SubResource("SpriteFrames_1iefk")
animation = &"idle"
autoplay = "idle"

[node name="Explosion" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_5e366")
animation = &"explosion"
frame = 6
frame_progress = 1.0

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 32)
shape = SubResource("CapsuleShape2D_exwa6")

[node name="HealthBar" parent="." instance=ExtResource("4_iqpmt")]
position = Vector2(-28, 53)
max_life = 3
life = 3

[connection signal="timeout" from="SpawnTimer" to="." method="_spawn_mob"]
